--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: Calculate user streak
         run: |
-            curl --location 'https://api.github.com/graphql' \
-            --header 'Content-Type: application/json' \
-            --header "Authorization: ${{ secrets.PAT_GITHUB_TOKEN }}" \ 
-            --data '{
-                "query": "query { user(login: \"juancolchete\") { name createdAt contributionsCollection { startedAt contributionCalendar { totalContributions weeks { contributionDays { date contributionCount } } } } } }"
-            }' 
+            curl --location 'https://api.github.com/graphql' --header 'Content-Type: application/json' --header "Authorization: ${{ secrets.PAT_GITHUB_TOKEN }}" --data '{"query": "query { user(login: \"juancolchete\") { name createdAt contributionsCollection { startedAt contributionCalendar { totalContributions weeks { contributionDays { date contributionCount } } } } } }"}' 
         #bash calculateStreak.sh juancolchete "${{ secrets.PAT_GITHUB_TOKEN }}"
