--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Save user contribution and calculate user streak
+name: Save user contribution and calculate user streak and generate user badge
 on:
   workflow_dispatch:
 jobs:
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Calculate user streak
         run: |
+            bash generateUserBadge.sh juancolchet 
             bash saveContributionCountPerDay.sh juancolchete "${{ secrets.GITHUB_TOKEN }}"
             bash calculateUserStreak.sh juancolchete
       - name: Upload to git
