--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Calculate user streak
         run: |
-            bash generateUserBadge.sh juancolchet 
+            bash generateUserBadge.sh juancolchete
             bash saveContributionCountPerDay.sh juancolchete "${{ secrets.GITHUB_TOKEN }}"
             bash calculateUserStreak.sh juancolchete
       - name: Upload to git
