--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install dependencies
+        run: |
+            sudo apt update && sudo apt install imagemagick
       - name: Calculate user streak
         run: |
             bash generateUserBadge.sh juancolchete
