--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # 1. PRE-FIX: Give runner permission to the system cache folder
-      - name: Fix Cache Permissions (Before Restore)
+      # 1. PRE-FIX: Take OWNERSHIP of the folder so 'tar' can restore timestamps
+      - name: Fix Cache Ownership
         run: |
-          sudo mkdir -p /var/cache/apt/archives
-          sudo chmod -R 777 /var/cache/apt/archives
+          sudo mkdir -p /var/cache/apt/archives/partial
+          # Change owner from root to the runner user
+          sudo chown -R $(whoami) /var/cache/apt/archives
     
-      # 2. RESTORE: Now actions/cache can write to that folder
+      # 2. RESTORE: Now actions/cache can fully restore the directory metadata
       - name: Cache Apt Archives
         id: cache-apt
         uses: actions/cache@v4
@@ -29,10 +30,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y imagemagick
           
-          # 4. POST-FIX: Clean lock file and fix permissions AGAIN for the 'Save' phase
-          # (apt-get might have recreated the lock file or changed perms)
+          # 4. POST-FIX: Clean lock and fix ownership AGAIN for the 'Save' phase
+          # (apt running as sudo will have created root-owned files/locks again)
           sudo rm -f /var/cache/apt/archives/lock
-          sudo chmod -R 777 /var/cache/apt/archives
+          sudo chown -R $(whoami) /var/cache/apt/archives
       - name: Calculate user streak
         run: |
             while read -r user; 
