--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     environment: main
     runs-on: ubuntu-latest
-    container: dpokidov/imagemagick:latest
+    container: juancolchete/imagemagickgithubactions:latest
     steps:
       - uses: actions/checkout@v4
       - name: Calculate user streak
