--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Calculate user streak
         run: |
-            bash saveContributionCountPerDay.sh juancolchete "${{ secrets.GITHUB_TOKEN }}"
-            bash calculateUserStreak.sh juancolchete
-            bash generateUserBadge.sh juancolchete
+            while read -r user; 
+            do 
+              bash saveContributionCountPerDay.sh $user "${{ secrets.GITHUB_TOKEN }}"
+              bash calculateUserStreak.sh $user
+              bash generateUserBadge.sh $user
+            done < <(jq -r '.users[]' "config/run.json")
             
       - name: Upload to git
         id: uploadGit
