--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -8,7 +8,7 @@ jobs:
     container: juancolchete/imagemagickgithubactions:latest
     steps:
       - uses: actions/checkout@v4
-      - name: Calculate user streak
+      - name: Run all
         shell: bash
         run: |
             while read -r user; 
