--- a/.github/workflows/generateUserBadge.yml
+++ b/.github/workflows/generateUserBadge.yml
@@ -20,4 +20,4 @@ jobs:
         id: uploadGit
         shell: bash
         run: |
-          curl -s https://raw.githubusercontent.com/juancolchete/utils/main/gitUpload.sh | bash /dev/stdin juancolchete juancolchete@gmail.com
+          curl -s https://raw.githubusercontent.com/juancolchete/utils/main/gitUpload.sh | bash /dev/stdin juancolchete juancolchete@gmail.com /__w/streakCounter/streakCounter
