--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -25,14 +25,4 @@ jobs:
         id: uploadGit
         shell: bash
         run: |
-          git config --global --add safe.directory /__w/streakCounter/streakCounter
-          LAST_COMMIT_MSG=$(git log -1 --pretty=%B)
-          if [[ `git status --porcelain` ]]; then
-            git config --global user.name "juancolchete"
-            git config --global user.email "juancolchete@gmail.com"
-            git add . 
-            git commit -m "upload: $LAST_COMMIT_MSG"
-            git push
-          else
-            echo "no changes to push"
-          fi
+          curl -s https://raw.githubusercontent.com/juancolchete/utils/main/gitUpload.sh | bash /dev/stdin ${{ vars.GIT_UPLOAD_PARAMS }}
