--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -20,4 +20,4 @@ jobs:
         id: uploadGit
         shell: bash
         run: |
-          curl -s https://raw.githubusercontent.com/juancolchete/utils/main/gitUpload.sh | bash /dev/stdin ${{ vars.GIT_UPLOAD_PARAMS }} ${{ github.workflow }}
+          curl -s https://raw.githubusercontent.com/juancolchete/utils/main/gitUpload.sh | bash /dev/stdin ${{ vars.GIT_UPLOAD_PARAMS }} "bot: ${{ github.workflow }}"
