--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -2,16 +2,12 @@ name: Run all
 on:
   workflow_dispatch:
 jobs:
-  build:
-    environment: main
-    runs-on: ubuntu-latest
-    container: juancolchete/imagemagickgithubactions:latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run all
-        shell: bash
-        run: |
-            while read -r user; 
+  upload-git:
+    uses: colchetedao/streakCounter/.github/workflows/git.yml@main
+    secrets: inherit
+    with:
+      exec: |
+        while read -r user; 
             do 
               bash saveContributionCountPerDay.sh $user "${{ secrets.GITHUB_TOKEN }}"
               bash calculateUserStreak.sh $user
@@ -20,9 +16,3 @@ jobs:
               bash yearCommitmentChart.sh $user
               bash yearDominanceChart.sh $user
             done < <(jq -r '.users[]' "config/run.json")
-            
-      - name: Upload to git
-        id: uploadGit
-        shell: bash
-        run: |
-          curl -s https://raw.githubusercontent.com/juancolchete/utils/main/gitUpload.sh | bash /dev/stdin ${{ vars.GIT_UPLOAD_PARAMS }}
