--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -9,7 +9,7 @@ jobs:
       exec: |
         while read -r user; 
             do 
-              bash saveContributionCountPerDay.sh $user "${{ secrets.GITHUB_TOKEN }}"
+              bash saveContributionCountPerDay.sh $user "$GITHUB_TOKEN"
               bash calculateUserStreak.sh $user
               bash generateUserBadge.sh $user
               bash statistics.sh $user
