ci: proper pass save contribution count per day on env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       exec: |
         while read -r user; 
         do 
-          bash saveContributionCountPerDay.sh $user "${{ secrets.GITHUB_TOKEN }}"
+          bash saveContributionCountPerDay.sh $user "$GITHUB_TOKEN"
           bash calculateUserStreak.sh $user
           bash generateUserBadge.sh $user
         done < <(jq -r '.users[]' "config/run.json")
